[project]
name = "cv-ml"
version = "0.1.0"
description = "Math and machine-learning foundations for computer vision practitioners — a publishable MyST book."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "jupyter>=1.0",
    "ipykernel>=6.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
